# telegram-connector-testing

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  generate_secret.py  mypy.ini  pyproject.toml
.github/workflows/: README.md  main.yml
docker_images/app/: Dockerfile.app
docker_images/deploy/: Dockerfile.deploy
docker_images/lambda/: Dockerfile.lambda
docker_images/testing/: Dockerfile.testing  ci.env.sh  entrypoint.sh
docs/pre-commit/: README.md  mypy.md  template.md
main/14c0ea04dfa3c394e799bf4c422f94eefca3d406/: unittest_report.xml
main/1b1de790b629d2330712c67dd7f8698e4172777c/: coverage.xml  unittest_report.xml
main/43a7ccff000fbcdf4c5bdb34cb03eb0ec08dac8f/: coverage.xml  unittest_report.xml
main/5f3f30992a80589ed139808aafa4898f7a41f627/: coverage.xml  unittest_report.xml
main/6067f0d158d0cfc9a9b8c803e0972d847a11d34d/: coverage.xml  unittest_report.xml
main/6dc92a32f997d6d5008bd33656c1e7662b392bce/: coverage.xml  unittest_report.xml
main/9494faa81c5d29ba2c624f060eaa683f2f3ce507/: coverage.xml  unittest_report.xml
main/c332f1b966ff206fe17ebcd55ad7be6b3f52c5b8/: coverage.xml  unittest_report.xml
main/cc3d4213f05e4472a1abc58397da74d022324cd3/: coverage.xml  unittest_report.xml
main/d771bca7c20e2a5d5fd9ba90e80ff7b75a4e1715/: coverage.xml  unittest_report.xml
main/de80a4cdfacd6654b6e9a6456a3e35d35be7886d/: coverage.xml  unittest_report.xml
main/ffb890cce061982b5879fb4ef16055d1c5ddaccc/: coverage.xml  unittest_report.xml
main/latest/: coverage.xml
src/: create_tables.py  main.py
src/api/: endpoints.py  routers.py
(+53 files in other folders)
