[project]
name = "telegram-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "ronihdzz",email = "ronaldo.runing_@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pymongo (>=4.12.1,<5.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sentry-sdk (>=2.27.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytz (>=2025.2,<2026.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
coverage-badge = "^1.1.2"
pre-commit = "^4.2.0"
mypy = "^1.15.0"

[tool.poetry]
package-mode = false
